--- a/views/admin/view-products.hbs
+++ b/views/admin/view-products.hbs
@@ -168,15 +168,15 @@
                         </button>
                       </div>
                       <div class="modal-body">
-                        <form action="/admin/productoffer/{{_id}}" method="POST">
+                        <form action="/admin/productoffer/{{_id}}" method="POST" id="addofferProductId">
                           <div class="form-group">
                             <label for="product_name">Title:</label>
-                            <input type="text" class="form-control" id="product_name" name="product_name" required>
+                            <input type="text" class="form-control" id="product_name-offer" name="product_name" placeholder="optional" required>
                           </div>
 
                           <div class="form-group">
                             <label for="offer_price">Offer Price:</label>
-                            <input type="number" class="form-control" id="offer_price" name="offer_price" min="0"
+                            <input type="number" class="form-control" id="offer_price" name="offer_price" min="1"
                               required>
                           </div>
                           <div class="form-group">
@@ -247,6 +247,7 @@
   <h2>Oops Product list is empty!</h2>
   {{/if}}
 </section>
+
 
 <script>
   const productForm = document.getElementById('productForm');
