change in offer

--- a/views/admin/offers.hbs
+++ b/views/admin/offers.hbs
@@ -428,7 +428,7 @@
                       <label for="category">Select Category:</label>
                       <select class="form-control" id="category" name="category" style="width: 150px;">
                         {{#each category}}
-                        <option value="{{categoryName}}">{{categoryName}}</option>
+                        <option value="{{_id}}">{{categoryName}}</option>
                         {{/each}}
                       </select>
                     </div>
