order-date-issue

--- a/views/users/vieworders.hbs
+++ b/views/users/vieworders.hbs
@@ -116,7 +116,7 @@
                         </div>
                         <div class="modal-body">
                           <div class="card-body">
-                            <p class="card-text"><span class="mr-2">Date</span>{{Date}}</p>
+                            <p class="card-text"><span class="mr-2">Date</span>{{formatDate Date}}</p>
                             <p class="card-text"><span class="mr-2">Order Id:</span>{{_id}}</p>
                             <p class="card-text"><span class="mr-2">Total Price:</span>₹{{totalPrice}}</p>
                             <p class="card-text"><span class="mr-2">Qunatity:</span>{{productId.[1].[0]}}</p>
